--- a/src/scss/landing.scss
+++ b/src/scss/landing.scss
@@ -93,6 +93,7 @@
 	}
 	@media screen and (max-width: 1000px) {
 		.title-banner {
+			height: 40vh;
 			.titles {
 				h1,
 				h2 {
@@ -104,16 +105,21 @@
 			}
 		}
 		.description {
+			min-height: 50vh;
 			.text-container {
 				p {
 					font-size: 1rem;
+				}
+			}
+			.call-to-action {
+				a {
+					font-size: 2.5rem;
 				}
 			}
 		}
 	}
 	@media screen and (max-width: 700px) {
 		.title-banner {
-			height: 40vh;
 			.titles {
 				padding: 0;
 				h1 {
@@ -125,6 +131,17 @@
 					font-size: 1.25rem;
 					text-align: center;
 					padding: 0 20px;
+				}
+			}
+		}
+		.description {
+			grid-template-columns: 1fr;
+			grid-template-rows: 20vh;
+
+			.call-to-action {
+				grid-row: 1 / span 2;
+				a {
+					font-size: 2rem;
 				}
 			}
 		}
