--- a/src/scss/landing.scss
+++ b/src/scss/landing.scss
@@ -146,4 +146,32 @@
 			}
 		}
 	}
+	@media screen and (min-width: 2500px) {
+		.description {
+			.text-container {
+				p {
+					font-size: 1.75rem;
+				}
+			}
+			.call-to-action {
+				a {
+					font-size: 6rem;
+				}
+			}
+		}
+	}
+	@media screen and (min-width: 3700px) {
+		.description {
+			.text-container {
+				p {
+					font-size: 2.5rem;
+				}
+			}
+			.call-to-action {
+				a {
+					font-size: 8rem;
+				}
+			}
+		}
+	}
 }
