--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -16,4 +16,14 @@ footer {
 	ul {
 		list-style-type: none;
 	}
+	@media screen and (max-width: 1350px) {
+	}
+	@media screen and (max-width: 1050px) {
+	}
+	@media screen and (max-width: 700px) {
+	}
+	@media screen and (min-width: 2500px) {
+	}
+	@media screen and (min-width: 3700px) {
+	}
 }
