--- a/src/scss/services.scss
+++ b/src/scss/services.scss
@@ -187,4 +187,14 @@
 			}
 		}
 	}
+	@media screen and (max-width: 1350px) {
+	}
+	@media screen and (max-width: 1050px) {
+	}
+	@media screen and (max-width: 700px) {
+	}
+	@media screen and (min-width: 2500px) {
+	}
+	@media screen and (min-width: 3700px) {
+	}
 }
