--- a/src/scss/review.scss
+++ b/src/scss/review.scss
@@ -12,7 +12,7 @@
 		animation: fadeIn 1s ease-out backwards;
 		h2 {
 			@include title-styles(white);
-			font-size: 6rem;
+			font-size: 5vw;
 		}
 	}
 	.reviews-container {
@@ -77,13 +77,72 @@
 		}
 	}
 	@media screen and (max-width: 1350px) {
-	}
-	@media screen and (max-width: 1050px) {
+		.reviews-container {
+			@for $i from 1 through 8 {
+				.review#{$i} {
+					@if ($i % 2 == 1) {
+						grid-area: #{$i + 1} / 2 / span 1 / span 5;
+					} @else {
+						grid-area: #{$i + 1} / 3 / span 1 / span 5;
+					}
+				}
+			}
+		}
 	}
 	@media screen and (max-width: 700px) {
+		.reviews-banner {
+			h2 {
+				font-size: 2rem;
+				text-align: center;
+				padding: 0 30px;
+			}
+		}
+		.reviews-container {
+			.review {
+				p:nth-child(1) {
+					padding-bottom: 0;
+				}
+				p:nth-child(2) {
+					padding-top: 0;
+				}
+			}
+			@for $i from 1 through 8 {
+				.review#{$i} {
+					grid-area: #{$i + 1} / 2 / span 1 / span 6;
+				}
+			}
+		}
 	}
 	@media screen and (min-width: 2500px) {
+		.reviews-container {
+			.review {
+				p:nth-child(1)::before,
+				p:nth-child(1)::after {
+					font-size: 3rem;
+				}
+				p:nth-child(1) {
+					font-size: 1.5rem;
+				}
+				p:nth-child(2) {
+					font-size: 1.875rem;
+				}
+			}
+		}
 	}
 	@media screen and (min-width: 3700px) {
+		.reviews-container {
+			.review {
+				p:nth-child(1)::before,
+				p:nth-child(1)::after {
+					font-size: 4rem;
+				}
+				p:nth-child(1) {
+					font-size: 2rem;
+				}
+				p:nth-child(2) {
+					font-size: 2.5rem;
+				}
+			}
+		}
 	}
 }
