--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -16,14 +16,29 @@ footer {
 	ul {
 		list-style-type: none;
 	}
-	@media screen and (max-width: 1350px) {
-	}
-	@media screen and (max-width: 1050px) {
-	}
 	@media screen and (max-width: 700px) {
+		flex-direction: column;
+		ul,
+		p {
+			width: 50%;
+			padding: 10px 0;
+			text-align: center;
+		}
 	}
 	@media screen and (min-width: 2500px) {
+		a,
+		li,
+		p,
+		span {
+			font-size: 1.5rem;
+		}
 	}
 	@media screen and (min-width: 3700px) {
+		a,
+		li,
+		p,
+		span {
+			font-size: 2rem;
+		}
 	}
 }
