--- a/src/scss/about.scss
+++ b/src/scss/about.scss
@@ -18,7 +18,7 @@
 		display: grid;
 		grid-template-columns: 1fr 1fr;
 		width: 100%;
-		height: 90vh;
+		min-height: 90vh;
 		background-color: $green1;
 		.family-text {
 			display: flex;
@@ -31,13 +31,15 @@
 			.overflow-container {
 				margin-left: 5vw;
 				h1 {
+					width: 90%;
 					margin-bottom: 7vh;
 					font-size: 6rem;
 					animation: fadeInFromAbove 1s 0.3s ease-out backwards;
 				}
 				p {
-					width: 30vw;
+					width: 75%;
 					animation: fadeInFromLeft 1s 0.7s ease-out backwards;
+					padding-bottom: 20px;
 				}
 			}
 		}
@@ -101,10 +103,72 @@
 		}
 	}
 	@media screen and (max-width: 1350px) {
+		.family {
+			.family-text {
+				.overflow-container {
+					h1 {
+						margin-bottom: 20px;
+						font-size: 5rem;
+					}
+					p {
+						font-size: 1.125rem;
+					}
+				}
+			}
+			.image-container {
+				img {
+					height: 35vw;
+					width: 35vw;
+				}
+			}
+		}
 	}
 	@media screen and (max-width: 1050px) {
+		.family {
+			.family-text {
+				.overflow-container {
+					h1 {
+						font-size: 3.4rem;
+						width: 90%;
+					}
+					p {
+						font-size: 1rem;
+						width: 85%;
+					}
+				}
+			}
+			.image-container {
+				img {
+					height: 40vw;
+					width: 40vw;
+				}
+			}
+		}
 	}
 	@media screen and (max-width: 700px) {
+		.family {
+			grid-template-columns: 100%;
+			grid-template-rows: 40vh minmax(50vh, auto);
+			.family-text {
+				.overflow-container {
+					margin: 0;
+					display: grid;
+					place-items: center;
+					h1,
+					p {
+						text-align: center;
+						width: 90%;
+						padding: 10px 0;
+					}
+				}
+			}
+			.image-container {
+				img {
+					height: 35vh;
+					width: 35vh;
+				}
+			}
+		}
 	}
 	@media screen and (min-width: 2500px) {
 	}
