--- a/src/css/about.css
+++ b/src/css/about.css
@@ -165,7 +165,11 @@
       font-size: 1.125rem; }
     .about-container .family .image-container img {
       height: 35vw;
-      width: 35vw; } }
+      width: 35vw; }
+    .about-container .facilities .banner h1 {
+      font-size: 5rem; }
+    .about-container .facilities .tiles p {
+      font-size: 1.125rem; } }
   @media screen and (max-width: 1050px) {
     .about-container .family .family-text .overflow-container h1 {
       font-size: 3.4rem;
@@ -175,7 +179,14 @@
       width: 85%; }
     .about-container .family .image-container img {
       height: 40vw;
-      width: 40vw; } }
+      width: 40vw; }
+    .about-container .facilities .banner {
+      background-position: 25% 50%; }
+      .about-container .facilities .banner h1 {
+        font-size: 3.4rem;
+        text-align: center; }
+    .about-container .facilities .tiles p {
+      font-size: 1rem; } }
   @media screen and (max-width: 700px) {
     .about-container .family {
       grid-template-columns: 100%;
@@ -191,14 +202,37 @@
           padding: 10px 0; }
       .about-container .family .image-container img {
         height: 35vh;
-        width: 35vh; } }
+        width: 35vh; }
+    .about-container .facilities .tiles {
+      grid-template-columns: 100%;
+      grid-template-rows: repeat(3, 1fr 1.5fr); }
+      .about-container .facilities .tiles p {
+        position: static;
+        width: 80%;
+        margin: 30px;
+        padding: 10px; }
+      .about-container .facilities .tiles img {
+        height: 100%; }
+      .about-container .facilities .tiles img:nth-child(2) {
+        grid-row: 4 / span 1; } }
+  @media screen and (max-width: 400px) {
+    .about-container .facilities .tiles {
+      grid-template-rows: repeat(3, 1fr 1fr); } }
   @media screen and (min-width: 2500px) {
     .about-container .family .family-text .overflow-container h1 {
       font-size: 8rem; }
     .about-container .family .family-text .overflow-container p {
+      font-size: 1.875rem; }
+    .about-container .facilities .banner h1 {
+      font-size: 8rem; }
+    .about-container .facilities .tiles p {
       font-size: 1.875rem; } }
   @media screen and (min-width: 3700px) {
     .about-container .family .family-text .overflow-container h1 {
       font-size: 10rem; }
     .about-container .family .family-text .overflow-container p {
+      font-size: 2.5rem; }
+    .about-container .facilities .banner h1 {
+      font-size: 10rem; }
+    .about-container .facilities .tiles p {
       font-size: 2.5rem; } }
