--- a/src/scss/services.scss
+++ b/src/scss/services.scss
@@ -5,7 +5,7 @@
 .services {
 	display: grid;
 	grid-template-columns: 1fr 1fr;
-	grid-template-rows: 90vh 100vh;
+	grid-template-rows: minmax(90vh, auto) minmax(100vh, auto);
 	margin-top: 10vh;
 	h1,
 	h2,
@@ -23,7 +23,7 @@
 	.our-services {
 		grid-area: 1 / 1 / 2 / 3;
 		width: 100%;
-		height: 100%;
+		min-height: 100%;
 		display: grid;
 		grid-template-columns: 1fr 1fr;
 		background-color: $green1;
@@ -50,15 +50,16 @@
 			background-color: $green2;
 			.overflow-container {
 				margin-left: 5vw;
+				display: grid;
+				align-items: start;
 				h1 {
+					width: 90%;
 					font-size: 5vw;
 					margin-bottom: 7vh;
-					margin-left: 5vw;
 					animation: fadeInFromAbove 1s 0.3s ease-out backwards;
 				}
 				p {
-					width: 30vw;
-					margin-left: 5vw;
+					width: 75%;
 					animation: fadeInFromLeft 1s 0.7s ease-out backwards;
 				}
 			}
@@ -68,7 +69,7 @@
 		grid-area: 2 / 1 / 3 / 2;
 		display: grid;
 		place-items: center;
-		grid-template-rows: 10vh 50vh 40vh;
+		grid-template-rows: 10vh auto auto;
 		width: 100%;
 		height: 100%;
 		background-color: $green2;
@@ -85,6 +86,7 @@
 			@extend %left-card;
 			align-self: start;
 			width: 500px;
+			margin: 20px 0;
 			padding: 0 20px 20px;
 			animation: fadeIn 1s ease-out backwards;
 			tr {
@@ -110,6 +112,7 @@
 			@extend %left-card;
 			box-sizing: border-box;
 			width: 500px;
+			margin: 20px 0;
 			padding: 20px 20px;
 			text-align: center;
 			animation: fadeIn 1s ease-out backwards;
@@ -129,7 +132,7 @@
 		place-items: center;
 		width: 100%;
 		height: 100%;
-		grid-template-rows: 10vh 50vh 40vh;
+		grid-template-rows: 10vh auto auto;
 		h1 {
 			font-size: 3.5vw;
 			text-align: center;
@@ -142,7 +145,8 @@
 			display: flex;
 			flex-direction: column;
 			justify-content: space-evenly;
-			width: 500px;
+			max-width: 500px;
+			margin: 20px 0;
 			padding-right: 20px;
 			background-color: $green1;
 			border: 1px solid $green2;
@@ -166,6 +170,7 @@
 		table {
 			@extend %right-card;
 			width: 500px;
+			margin: 20px 0;
 			padding: 20px;
 			background-color: $green1;
 			border: 1px solid $green2;
@@ -188,13 +193,263 @@
 		}
 	}
 	@media screen and (max-width: 1350px) {
+		.our-services {
+			.container {
+				.overflow-container {
+					h1 {
+						margin-bottom: 20px;
+						font-size: 5rem;
+					}
+					p {
+						font-size: 1.125rem;
+					}
+				}
+			}
+			.image-container {
+				img {
+					height: 35vw;
+					width: 35vw;
+				}
+			}
+		}
+		.prices {
+			grid-template-rows: 10vh auto auto;
+			h1 {
+				font-weight: 400;
+			}
+			table {
+				width: 75%;
+				margin: 20px 0;
+				tr {
+					th {
+						font-size: 1.75rem;
+					}
+				}
+			}
+			p {
+				width: 75%;
+				margin: 20px 0;
+				span {
+					font-size: 1.75rem;
+				}
+			}
+		}
+		.important-information {
+			grid-template-rows: 10vh auto auto;
+			h1 {
+				font-weight: 400;
+			}
+			ul {
+				width: 75%;
+				margin: 20px 0;
+				li {
+					margin-left: 15px;
+					img {
+						padding-right: 15px;
+					}
+				}
+			}
+			table {
+				width: 75%;
+				margin: 20px 0;
+				tr {
+					th {
+						font-size: 1.75rem;
+					}
+				}
+			}
+		}
 	}
 	@media screen and (max-width: 1050px) {
+		.our-services {
+			.container {
+				.overflow-container {
+					h1 {
+						font-size: 3.4rem;
+						font-weight: 400;
+						width: 90%;
+					}
+					p {
+						font-size: 1rem;
+						width: 85%;
+					}
+				}
+			}
+			.image-container {
+				img {
+					height: 40vw;
+					width: 40vw;
+				}
+			}
+		}
+		.prices {
+			grid-template-rows: 100px auto auto;
+			h1 {
+				font-size: 2.25rem;
+				font-weight: 400;
+			}
+			table {
+				width: 85%;
+				tr {
+					td {
+						font-size: 1rem;
+					}
+				}
+			}
+			p {
+				width: 85%;
+				font-size: 1rem;
+			}
+		}
+		.important-information {
+			grid-template-rows: 100px auto auto;
+			h1 {
+				font-size: 2.25rem;
+				font-weight: 400;
+			}
+			ul {
+				width: 85%;
+				li {
+					margin-left: 10px;
+					P {
+						font-size: 1rem;
+					}
+					img {
+						padding-right: 10px;
+						width: 25px;
+						height: 25px;
+					}
+				}
+			}
+			table {
+				width: 85%;
+				tr {
+					td {
+						font-size: 1rem;
+					}
+				}
+			}
+		}
 	}
 	@media screen and (max-width: 700px) {
+		grid-template-rows: repeat(3, minmax(50vh, auto));
+		grid-template-columns: 100%;
+		.our-services {
+			grid-template-rows: minmax(30vh, auto) minmax(40vh, auto);
+			grid-template-columns: 100%;
+			.container {
+				display: grid;
+				place-items: center;
+				.overflow-container {
+					place-items: center;
+					width: 80%;
+					margin: 0;
+					h1,
+					p {
+						width: auto;
+						text-align: center;
+						margin-bottom: 15px;
+					}
+				}
+			}
+			.image-container {
+				grid-area: 2 / 1 / 3 / 3;
+				img {
+					height: 35vh;
+					width: 35vh;
+				}
+			}
+		}
+		.prices {
+			grid-area: 2 / 1 / 3 / 3;
+			h1 {
+				font-size: 3rem;
+			}
+			table {
+				width: 80%;
+				tr {
+					th {
+						font-size: 1.5rem;
+					}
+				}
+			}
+			p {
+				width: 80%;
+				margin-bottom: 40px;
+				span {
+					font-size: 1.5rem;
+				}
+			}
+		}
+		.important-information {
+			grid-area: 3 / 1 / 4 / 3;
+			h1 {
+				font-size: 3rem;
+			}
+			ul {
+				width: 80%;
+			}
+			table {
+				width: 80%;
+				margin-bottom: 40px;
+				tr {
+					th {
+						font-size: 1.5rem;
+					}
+				}
+			}
+		}
 	}
 	@media screen and (min-width: 2500px) {
+		.our-services {
+			.container {
+				.overflow-container {
+					h1 {
+						font-size: 8rem;
+					}
+					p {
+						font-size: 1.875rem;
+					}
+				}
+			}
+		}
+		.prices {
+			table {
+			}
+			p {
+			}
+		}
+		.important-information {
+			ul {
+			}
+			table {
+			}
+		}
 	}
 	@media screen and (min-width: 3700px) {
+		.our-services {
+			.container {
+				.overflow-container {
+					h1 {
+						font-size: 10rem;
+					}
+					p {
+						font-size: 2.5rem;
+					}
+				}
+			}
+		}
+		.prices {
+			table {
+			}
+			p {
+			}
+		}
+		.important-information {
+			ul {
+			}
+			table {
+			}
+		}
 	}
 }
