--- a/src/css/services.css
+++ b/src/css/services.css
@@ -183,7 +183,7 @@
       display: flex;
       flex-direction: column;
       justify-content: space-evenly;
-      max-width: 500px;
+      width: 500px;
       margin: 20px 0;
       padding-right: 20px;
       background-color: #d7fbe8;
@@ -351,9 +351,57 @@
     .services .our-services .container .overflow-container h1 {
       font-size: 8rem; }
     .services .our-services .container .overflow-container p {
-      font-size: 1.875rem; } }
+      font-size: 1.875rem; }
+    .services .prices table {
+      width: 750px; }
+      .services .prices table tr th {
+        font-size: 3rem; }
+      .services .prices table tr td {
+        font-size: 1.75rem; }
+    .services .prices p {
+      width: 750px;
+      font-size: 1.75rem; }
+      .services .prices p span {
+        font-size: 3rem; }
+    .services .important-information ul {
+      width: 750px; }
+      .services .important-information ul li p {
+        font-size: 1.75rem; }
+      .services .important-information ul li img {
+        width: 50px;
+        height: 50px; }
+    .services .important-information table {
+      width: 750px; }
+      .services .important-information table tr th {
+        font-size: 3rem; }
+      .services .important-information table tr td {
+        font-size: 1.75rem; } }
   @media screen and (min-width: 3700px) {
     .services .our-services .container .overflow-container h1 {
       font-size: 10rem; }
     .services .our-services .container .overflow-container p {
-      font-size: 2.5rem; } }
+      font-size: 2.5rem; }
+    .services .prices table {
+      width: 1000px; }
+      .services .prices table tr th {
+        font-size: 4rem; }
+      .services .prices table tr td {
+        font-size: 2.5rem; }
+    .services .prices p {
+      width: 1000px;
+      font-size: 2.5rem; }
+      .services .prices p span {
+        font-size: 4rem; }
+    .services .important-information ul {
+      width: 1000px; }
+      .services .important-information ul li p {
+        font-size: 2.5rem; }
+      .services .important-information ul li img {
+        width: 60px;
+        height: 60px; }
+    .services .important-information table {
+      width: 1000px; }
+      .services .important-information table tr th {
+        font-size: 4rem; }
+      .services .important-information table tr td {
+        font-size: 2.5rem; } }
