--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -97,7 +97,7 @@
   .contact .contact-info {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 35vh 40vh 50vh 40vh;
+    grid-template-rows: minmax(35vh, auto) minmax(40vh, auto) minmax(50vh, auto) minmax(40vh, auto);
     place-items: center;
     background-color: #ecfaf3; }
     .contact .contact-info p {
@@ -123,6 +123,7 @@
         animation: fadeIn 1s 0.6s ease-out backwards; }
     .contact .contact-info .opening-paragraph {
       grid-area: 2 / 1 / 3 / 2;
+      margin: 20px 0;
       animation: fadeInFromLeft 1s 0.6s backwards; }
     .contact .contact-info .phone-numbers,
     .contact .contact-info .address {
@@ -138,9 +139,9 @@
           font-weight: 400;
           padding-bottom: 20px; }
     .contact .contact-info .phone-numbers {
+      margin: 20px 0;
       animation: fadeIn 1s 0.3s ease-out backwards; }
       .contact .contact-info .phone-numbers p {
-        font-size: 1.5rem;
         background: radial-gradient(#e3f39b, #ffbf00);
         box-shadow: 7px 10px 10px #bf9b30;
         animation: fadeIn 1s 0.7s ease-out backwards; }
@@ -182,9 +183,81 @@
       .contact .contact-info table tr td:nth-child(2) {
         text-align: center; }
     .contact .contact-info .address {
-      grid-area: 4 / 2 / 5 / 3; }
+      grid-area: 4 / 2 / 5 / 3;
+      margin: 20px 0; }
       .contact .contact-info .address p {
         animation: fadeIn 1s ease-out backwards; }
         .contact .contact-info .address p .address-header {
           font-size: 3rem;
           color: black; }
+  @media screen and (max-width: 1350px) {
+    .contact .contact-info .banner h1 {
+      font-size: 5rem; }
+    .contact .contact-info .banner h2 {
+      font-size: 2.5rem; }
+    .contact .contact-info p {
+      width: 75%;
+      font-size: 1.25rem; }
+    .contact .contact-info .phone-numbers p .phone-numbers-header {
+      font-size: 2.5rem; }
+    .contact .contact-info .phone-numbers p a span {
+      font-size: 1.75rem; }
+    .contact .contact-info table {
+      width: 75%;
+      margin: 20px 0; }
+      .contact .contact-info table tr th {
+        font-size: 2.5rem; }
+      .contact .contact-info table tr td {
+        font-size: 1.25rem; }
+    .contact .contact-info .address p .address-header {
+      font-size: 2.5rem; } }
+  @media screen and (max-width: 1050px) {
+    .contact .contact-info p {
+      width: 80%;
+      font-size: 1rem; }
+    .contact .contact-info .phone-numbers p .phone-numbers-header {
+      font-size: 2rem; }
+    .contact .contact-info .phone-numbers p a span {
+      font-size: 1.375rem; }
+    .contact .contact-info table {
+      width: 80%;
+      margin: 20px 0;
+      padding: 10px; }
+      .contact .contact-info table tr th {
+        font-size: 2rem; }
+      .contact .contact-info table tr td {
+        font-size: 1rem; }
+    .contact .contact-info .address {
+      width: 80%; }
+      .contact .contact-info .address p .address-header {
+        font-size: 2rem; } }
+  @media screen and (max-width: 700px) {
+    .contact .contact-info {
+      grid-template-columns: 100%;
+      grid-template-rows: minmax(30vh, auto) repeat(5, minmax(20vh, auto)); }
+      .contact .contact-info .banner h1 {
+        font-size: 3.5rem;
+        text-align: center; }
+      .contact .contact-info .banner h2 {
+        font-size: 1.75rem;
+        text-align: center; }
+      .contact .contact-info .opening-paragraph {
+        grid-area: 2 / 1 / 3 / 2; }
+      .contact .contact-info .phone-numbers {
+        grid-area: 3 / 1 / 4 / 2; }
+      .contact .contact-info iframe {
+        grid-area: 4 / 1 / 5 / 2; }
+      .contact .contact-info table {
+        grid-area: 5 / 1 / 6 / 2; }
+      .contact .contact-info .address {
+        grid-area: 6 / 1 / 7 / 2; } }
+  @media screen and (min-width: 2500px) {
+    .contact .contact-info .banner h1 {
+      font-size: 8rem; }
+    .contact .contact-info .banner h2 {
+      font-size: 4rem; } }
+  @media screen and (min-width: 3700px) {
+    .contact .contact-info .banner h1 {
+      font-size: 10rem; }
+    .contact .contact-info .banner h2 {
+      font-size: 5rem; } }
