--- a/src/scss/contact.scss
+++ b/src/scss/contact.scss
@@ -22,7 +22,11 @@
 	.contact-info {
 		display: grid;
 		grid-template-columns: 1fr 1fr;
-		grid-template-rows: 35vh 40vh 50vh 40vh;
+		grid-template-rows:
+			minmax(35vh, auto)
+			minmax(40vh, auto)
+			minmax(50vh, auto)
+			minmax(40vh, auto);
 		place-items: center;
 		background-color: $background-color;
 		p {
@@ -52,6 +56,7 @@
 			@extend %light-wallpaper;
 			@extend %left-card;
 			grid-area: 2 / 1 / 3 / 2;
+			margin: 20px 0;
 			animation: fadeInFromLeft 1s 0.6s backwards;
 		}
 		.phone-numbers,
@@ -72,9 +77,9 @@
 		}
 		.phone-numbers {
 			@extend %dark-wallpaper;
+			margin: 20px 0;
 			animation: fadeIn 1s 0.3s ease-out backwards;
 			p {
-				font-size: 1.5rem;
 				background: radial-gradient($gold2, $gold3);
 				box-shadow: 7px 10px 10px $gold4;
 				animation: fadeIn 1s 0.7s ease-out backwards;
@@ -131,6 +136,7 @@
 		}
 		.address {
 			grid-area: 4 / 2 / 5 / 3;
+			margin: 20px 0;
 			p {
 				@extend %light-wallpaper;
 				animation: fadeIn 1s ease-out backwards;
@@ -142,13 +148,146 @@
 		}
 	}
 	@media screen and (max-width: 1350px) {
+		.contact-info {
+			.banner {
+				h1 {
+					font-size: 5rem;
+				}
+				h2 {
+					font-size: 2.5rem;
+				}
+			}
+			p {
+				width: 75%;
+				font-size: 1.25rem;
+			}
+			.phone-numbers {
+				p {
+					.phone-numbers-header {
+						font-size: 2.5rem;
+					}
+					a {
+						span {
+							font-size: 1.75rem;
+						}
+					}
+				}
+			}
+			table {
+				width: 75%;
+				margin: 20px 0;
+				tr {
+					th {
+						font-size: 2.5rem;
+					}
+					td {
+						font-size: 1.25rem;
+					}
+				}
+			}
+			.address {
+				p {
+					.address-header {
+						font-size: 2.5rem;
+					}
+				}
+			}
+		}
 	}
 	@media screen and (max-width: 1050px) {
+		.contact-info {
+			p {
+				width: 80%;
+				font-size: 1rem;
+			}
+			.phone-numbers {
+				p {
+					.phone-numbers-header {
+						font-size: 2rem;
+					}
+					a {
+						span {
+							font-size: 1.375rem;
+						}
+					}
+				}
+			}
+			table {
+				width: 80%;
+				margin: 20px 0;
+				padding: 10px;
+				tr {
+					th {
+						font-size: 2rem;
+					}
+					td {
+						font-size: 1rem;
+					}
+				}
+			}
+			.address {
+				width: 80%;
+				p {
+					.address-header {
+						font-size: 2rem;
+					}
+				}
+			}
+		}
 	}
 	@media screen and (max-width: 700px) {
+		.contact-info {
+			grid-template-columns: 100%;
+			grid-template-rows: minmax(30vh, auto) repeat(5, minmax(20vh, auto));
+			.banner {
+				h1 {
+					font-size: 3.5rem;
+					text-align: center;
+				}
+				h2 {
+					font-size: 1.75rem;
+					text-align: center;
+				}
+			}
+			.opening-paragraph {
+				grid-area: 2 / 1 / 3 / 2;
+			}
+			.phone-numbers {
+				grid-area: 3 / 1 / 4 / 2;
+			}
+			iframe {
+				grid-area: 4 / 1 / 5 / 2;
+			}
+			table {
+				grid-area: 5 / 1 / 6 / 2;
+			}
+			.address {
+				grid-area: 6 / 1 / 7 / 2;
+			}
+		}
 	}
 	@media screen and (min-width: 2500px) {
+		.contact-info {
+			.banner {
+				h1 {
+					font-size: 8rem;
+				}
+				h2 {
+					font-size: 4rem;
+				}
+			}
+		}
 	}
 	@media screen and (min-width: 3700px) {
+		.contact-info {
+			.banner {
+				h1 {
+					font-size: 10rem;
+				}
+				h2 {
+					font-size: 5rem;
+				}
+			}
+		}
 	}
 }
