--- a/src/scss/contact.scss
+++ b/src/scss/contact.scss
@@ -238,7 +238,7 @@
 	@media screen and (max-width: 700px) {
 		.contact-info {
 			grid-template-columns: 100%;
-			grid-template-rows: minmax(30vh, auto) repeat(5, minmax(20vh, auto));
+			grid-template-rows: minmax(30vh, auto) repeat(5, minmax(30vh, auto));
 			.banner {
 				h1 {
 					font-size: 3.5rem;
@@ -276,6 +276,44 @@
 					font-size: 4rem;
 				}
 			}
+			.opening-paragraph {
+				width: 750px;
+				font-size: 1.75rem;
+			}
+			.phone-numbers {
+				p {
+					width: 750px;
+					font-size: 1.75rem;
+					.phone-numbers-header {
+						font-size: 3.5rem;
+					}
+					a {
+						span {
+							font-size: 2.25rem;
+						}
+					}
+				}
+			}
+			table {
+				width: 750px;
+				tr {
+					th {
+						font-size: 3.5rem;
+					}
+					td {
+						font-size: 1.75rem;
+					}
+				}
+			}
+			.address {
+				p {
+					width: 750px;
+					font-size: 1.75rem;
+					.address-header {
+						font-size: 3.5rem;
+					}
+				}
+			}
 		}
 	}
 	@media screen and (min-width: 3700px) {
@@ -286,6 +324,44 @@
 				}
 				h2 {
 					font-size: 5rem;
+				}
+			}
+			.opening-paragraph {
+				width: 1000px;
+				font-size: 2.5rem;
+			}
+			.phone-numbers {
+				p {
+					width: 1000px;
+					font-size: 2.5rem;
+					.phone-numbers-header {
+						font-size: 5rem;
+					}
+					a {
+						span {
+							font-size: 2.25rem;
+						}
+					}
+				}
+			}
+			table {
+				width: 1000px;
+				tr {
+					th {
+						font-size: 5rem;
+					}
+					td {
+						font-size: 2.5rem;
+					}
+				}
+			}
+			.address {
+				p {
+					width: 1000px;
+					font-size: 2.5rem;
+					.address-header {
+						font-size: 5rem;
+					}
 				}
 			}
 		}
