--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -63,7 +63,7 @@ nav {
     nav .logo a {
       display: flex;
       align-items: center;
-      text-decoration: none; }
+      text-decoration-color: rgba(0, 0, 0, 0); }
       nav .logo a img {
         height: 8vh;
         width: auto;
@@ -95,7 +95,7 @@ nav {
         font-weight: 400;
         font-size: 2rem;
         color: black;
-        text-decoration: none; }
+        text-decoration-color: rgba(0, 0, 0, 0); }
     nav ul .visible {
       opacity: 1; }
     nav ul .invisible {
@@ -116,6 +116,11 @@ nav {
       background-color: #1fab89;
       animation: fadeInFromRight 0.7s 0.8s backwards ease-out;
       transition: all 0.7s ease-out; }
+  nav a:hover {
+    transform: translateX(10px);
+    text-decoration-color: rgba(0, 0, 0, 0.5); }
+  nav a {
+    transition: all 0.3s; }
   @media screen and (max-width: 1350px) {
     nav ul li a {
       font-size: 1.5rem; } }
