--- a/src/scss/nav.scss
+++ b/src/scss/nav.scss
@@ -17,7 +17,7 @@ nav {
 		a {
 			display: flex;
 			align-items: center;
-			text-decoration: none;
+			text-decoration-color: rgba(0, 0, 0, 0);
 			img {
 				height: 8vh;
 				width: auto;
@@ -54,7 +54,7 @@ nav {
 				font-weight: 400;
 				font-size: 2rem;
 				color: black;
-				text-decoration: none;
+				text-decoration-color: rgba(0, 0, 0, 0);
 			}
 		}
 		.visible {
@@ -77,6 +77,13 @@ nav {
 				transition: all ($i * 0.1s + 0.3s) ease-out;
 			}
 		}
+	}
+	a:hover {
+		transform: translateX(10px);
+		text-decoration-color: rgba(0, 0, 0, 0.5);
+	}
+	a {
+		transition: all 0.3s;
 	}
 	@media screen and (max-width: 1350px) {
 		ul {
