--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -11,10 +11,14 @@ footer {
   color: white;
   background-color: #13614d; }
   footer a {
+    display: inline-block;
     text-decoration: none;
-    color: white; }
+    color: white;
+    transition: all 0.3s; }
   footer ul {
     list-style-type: none; }
+  footer a:hover {
+    transform: translateX(5px); }
   @media screen and (max-width: 700px) {
     footer {
       flex-direction: column; }
