--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -10,11 +10,16 @@ footer {
 	color: white;
 	background-color: $green5;
 	a {
+		display: inline-block;
 		text-decoration: none;
 		color: white;
+		transition: all 0.3s;
 	}
 	ul {
 		list-style-type: none;
+	}
+	a:hover {
+		transform: translateX(5px);
 	}
 	@media screen and (max-width: 700px) {
 		flex-direction: column;
