--- a/src/scss/contact.scss
+++ b/src/scss/contact.scss
@@ -88,11 +88,17 @@
 					font-size: 3rem;
 				}
 				a {
-					text-decoration: none;
+					text-decoration-color: rgba(0, 0, 0, 0);
+					transition: all 0.3s;
+					display: inline-block;
 					span {
 						font-size: 2rem;
 						padding-left: 1rem;
 					}
+				}
+				a:hover {
+					transform: translateX(10px);
+					text-decoration-color: rgba(0, 0, 0, 0.7);
 				}
 			}
 		}
