font weights added to import in variables scss. email added to contact info

--- a/src/scss/contact.scss
+++ b/src/scss/contact.scss
@@ -95,6 +95,10 @@
 						font-size: 2rem;
 						padding-left: 1rem;
 					}
+					.email {
+						font-size: inherit;
+						font-weight: bold;
+					}
 				}
 				a:hover {
 					transform: translateX(10px);
