--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -1,6 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Alegreya:ital@0;1&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400;0,500;0,700;1,400&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;1,300;1,400&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Alegreya:ital@0;1&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400;0,500;0,700;1,400&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;1,300;1,400&display=swap");
 .contact .contact-info .banner, .contact .contact-info .phone-numbers,
 .contact .contact-info .address {
@@ -155,6 +155,9 @@
           .contact .contact-info .phone-numbers p a span {
             font-size: 2rem;
             padding-left: 1rem; }
+          .contact .contact-info .phone-numbers p a .email {
+            font-size: inherit;
+            font-weight: bold; }
         .contact .contact-info .phone-numbers p a:hover {
           transform: translateX(10px);
           text-decoration-color: rgba(0, 0, 0, 0.7); }
