--- a/src/scss/about.scss
+++ b/src/scss/about.scss
@@ -5,6 +5,7 @@
 .about-container {
 	display: flex;
 	flex-direction: column;
+	justify-content: center;
 	margin-top: 10vh;
 	overflow-x: hidden;
 	p {
