--- a/src/scss/gallery.scss
+++ b/src/scss/gallery.scss
@@ -25,4 +25,10 @@
 			transform: scale(1.1);
 		}
 	}
+	@media screen and (max-width: 540px) {
+		grid-template-columns: 1fr;
+		grid-auto-rows: 400px;
+		gap: 10px;
+		padding: 5vh 10px;
+	}
 }
