--- a/src/scss/gallery.scss
+++ b/src/scss/gallery.scss
@@ -25,6 +25,23 @@
 			transform: scale(1.1);
 		}
 	}
+	.modal {
+		display: grid;
+		place-items: center;
+		position: fixed;
+		top: 0;
+		left: 0;
+		height: 100%;
+		width: 100%;
+		background-color: hsla(0, 0%, 0%, 0.7);
+		transition: 0.7s;
+		z-index: 10000;
+		button {
+			position: fixed;
+			top: 10vh;
+			right: 10vh;
+		}
+	}
 	@media screen and (max-width: 540px) {
 		grid-template-columns: 1fr;
 		grid-auto-rows: 400px;
