--- a/src/css/gallery.css
+++ b/src/css/gallery.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400;0,500;0,700;1,400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;1,300;1,400&display=swap");
 .gallery {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
@@ -28,7 +30,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    height: 100%;
+    height: 100vh;
     width: 100%;
     background-color: rgba(0, 0, 0, 0.7);
     transition: 0.7s;
@@ -36,7 +38,25 @@
     .gallery .modal button {
       position: fixed;
       top: 10vh;
-      right: 10vh; }
+      right: 10vh;
+      font-size: 30px;
+      font-weight: bold;
+      padding: 10px;
+      border-radius: 5px;
+      border: 0;
+      background-color: #d7fbe8;
+      opacity: 0.9;
+      transition: 0.15s; }
+    .gallery .modal button:focus {
+      outline: 0;
+      border: 0; }
+    .gallery .modal button:active {
+      transform: scale(0.9) !important; }
+    .gallery .modal button:hover {
+      transform: scale(1.1); }
+    .gallery .modal img {
+      max-height: 90vh;
+      max-width: 90%; }
   @media screen and (max-width: 540px) {
     .gallery {
       grid-template-columns: 1fr;
