--- a/src/scss/gallery.scss
+++ b/src/scss/gallery.scss
@@ -1,3 +1,5 @@
+@import './variables/variables';
+
 .gallery {
 	display: grid;
 	grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
@@ -31,7 +33,7 @@
 		position: fixed;
 		top: 0;
 		left: 0;
-		height: 100%;
+		height: 100vh;
 		width: 100%;
 		background-color: hsla(0, 0%, 0%, 0.7);
 		transition: 0.7s;
@@ -40,6 +42,28 @@
 			position: fixed;
 			top: 10vh;
 			right: 10vh;
+			font-size: 30px;
+			font-weight: bold;
+			padding: 10px;
+			border-radius: 5px;
+			border: 0;
+			background-color: $green1;
+			opacity: 0.9;
+			transition: 0.15s;
+		}
+		button:focus {
+			outline: 0;
+			border: 0;
+		}
+		button:active {
+			transform: scale(0.9) !important;
+		}
+		button:hover {
+			transform: scale(1.1);
+		}
+		img {
+			max-height: 90vh;
+			max-width: 90%;
 		}
 	}
 	@media screen and (max-width: 540px) {
