--- a/src/scss/gallery.scss
+++ b/src/scss/gallery.scss
@@ -1,6 +1,8 @@
 @import './variables/variables';
+@import './variables/mixins';
 
 .gallery {
+	@extend %light-wallpaper;
 	display: grid;
 	grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
 	grid-auto-rows: 600px;
