--- a/src/css/gallery.css
+++ b/src/css/gallery.css
@@ -64,6 +64,10 @@
     .gallery .modal img {
       max-height: 90vh;
       max-width: 90%; }
+  @media screen and (max-width: 1100px) {
+    .gallery {
+      grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+      grid-auto-rows: 450px; } }
   @media screen and (max-width: 540px) {
     .gallery {
       grid-template-columns: 1fr;
