--- a/src/scss/gallery.scss
+++ b/src/scss/gallery.scss
@@ -68,6 +68,10 @@
 			max-width: 90%;
 		}
 	}
+	@media screen and (max-width: 1100px) {
+		grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+		grid-auto-rows: 450px;
+	}
 	@media screen and (max-width: 540px) {
 		grid-template-columns: 1fr;
 		grid-auto-rows: 400px;
