--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -163,7 +163,7 @@ nav {
         position: fixed;
         top: 0;
         right: 0;
-        height: 100%;
+        height: 100vh;
         width: 30%;
         opacity: 0.85; }
         nav ul li a {
