--- a/src/scss/nav.scss
+++ b/src/scss/nav.scss
@@ -142,7 +142,7 @@ nav {
 			position: fixed;
 			top: 0;
 			right: 0;
-			height: 100%;
+			height: 100vh;
 			width: 30%;
 			opacity: 0.85;
 			li {
