some initial obvious styling fixes applied. testimonials title updated

--- a/src/scss/review.scss
+++ b/src/scss/review.scss
@@ -3,6 +3,7 @@
 @import 'variables/animations';
 
 .reviews {
+	margin-top: 10vh;
 	width: 100%;
 	.reviews-banner {
 		@include parallax-banner('../images/banner-placeholder-2.jpg');
