--- a/src/css/gallery.css
+++ b/src/css/gallery.css
@@ -14,7 +14,7 @@
   gap: 20px;
   place-items: center;
   width: 100%;
-  padding: 5vh 20px;
+  padding: 20px;
   box-sizing: border-box; }
   .gallery .overflow-container {
     overflow: hidden;
@@ -73,4 +73,4 @@
       grid-template-columns: 1fr;
       grid-auto-rows: 400px;
       gap: 10px;
-      padding: 5vh 10px; } }
+      padding: 10px; } }
