--- a/src/css/review.css
+++ b/src/css/review.css
@@ -70,6 +70,7 @@
     opacity: 1; } }
 
 .reviews {
+  margin-top: 10vh;
   width: 100%; }
   .reviews .reviews-banner {
     background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("../images/banner-placeholder-2.jpg");
