--- a/src/scss/gallery.scss
+++ b/src/scss/gallery.scss
@@ -9,7 +9,7 @@
 	gap: 20px;
 	place-items: center;
 	width: 100%;
-	padding: 5vh 20px;
+	padding: 20px;
 	box-sizing: border-box;
 	.overflow-container {
 		overflow: hidden;
@@ -76,6 +76,6 @@
 		grid-template-columns: 1fr;
 		grid-auto-rows: 400px;
 		gap: 10px;
-		padding: 5vh 10px;
+		padding: 10px;
 	}
 }
